# Faderinator

./: README.md
.faderinator/: CMakeLists.txt  YAHAL_import.cmake
.faderinator/src/: Application.cpp  Application.h  Fader.cpp  Fader.h  img_test.cpp  main.cpp
.faderinator/src/display/: Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  readme.md
.faderinator/src/display/GFX/: Adafruit_GFX.cpp  Adafruit_GFX.h  Print.h  glcdfont.c
.faderinator/src/io/: ConfigurationPacket.h  DataPacket.h  SerialConnection.cpp  SerialConnection.h
.faderinator/src/util/: ByteRegion.h  GpioPin.cpp  GpioPin.h  InputPin.cpp  InputPin.h  VirtualArray.h  i2c_rp2040_wire.h  util.h
.faderinator/src/util/copy/: i2c_rp2040_copy.cpp  i2c_rp2040_copy.h
FaderTest/: FaderTest.csproj  FaderTest.sln  PluginPage.cs  Program.cs
FaderTest/Audio/: AudioChannel.cs  AudioManager.cs  AudioPlugin.cs
FaderTest/IO/: ConfigurationPacket.cs  DataPacket.cs  HWConnection.cs  SerialConnection.cs  Util.cs
